# project-neural_network

./: Dockerfile  Model.ipynb  main.py  model_i.py  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
