[tool.poetry]
name = "project-neural-network"
version = "0.1.0"
description = ""
authors = ["Command number 4"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standart"], version = "^0.27.0.post1"}
jinja2 = "^3.1.3"
python-multipart = "^0.0.8"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
